.provarCaches/00D410000011HE0EAM/objects/rstk__csobjpagesetup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>rstk__neweditmodeoption__c</fullName>
        <label>New/Edit Mode Option</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__neweditmodevfpage__c</fullName>
        <label>New/Edit Mode VF Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__viewmodeoption__c</fullName>
        <label>View Mode Option</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__viewmodevfpage__c</fullName>
        <label>View Mode VF Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Object Page Setup</label>
</CustomObject>